--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyDieRoller1</string>
+    <string name="space" />
+    <string name="roll">Roll</string>
 </resources>
