made the button work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyDieRoller1</string>
+    <string name="app_name">My Di Roller 1</string>
     <string name="space" />
     <string name="roll">Roll</string>
 </resources>
